--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="org.tilespitter.mapboxtiles"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name"  android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name=".MBTilesOsmdroidExample"
                   android:label="@string/app_name">
             <intent-filter>
@@ -13,6 +13,7 @@
         </activity>
 
     </application>
-
+    
+<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="7" />
 
 </manifest> 
